package org.example.lfmnacional.enums;

public enum DecisionComisario {
    A_FAVOR,
    EN_CONTRA,
    ABSTENCION
}
