package org.example.lfmnacional.enums;

public enum EstadoApelacion {
    PENDIENTE,
    APROBADA,
    RECHAZADA
}
