package org.example.lfmnacional.enums;

public enum EstadoIncidente {
    PENDIENTE,
    EN_ANALISIS,
    RESUELTO
}
