package org.example.lfmnacional.enums;

public enum OrigenSancion {
    REAL_PENALTY,
    COMISARIO,
    ADMIN
}
