package org.example.lfmnacional.enums;

public enum RolPilotoIncidente {
    CAUSANTE,
    AFECTADO
}
