package org.example.lfmnacional.enums;

public enum TipoSancion {
    PUESTOS,
    SEGUNDOS,
    DRIVE_THROUGH,
    STOP_AND_GO,
    DESCALIFICACION,
    ELO,
    SAFETY_RATING
}
